[package]
name = "mnist_classifier"
version = "0.1.0"
edition = "2021"

[dependencies]
candle-core = "0.9"
candle-nn = "0.9"
candle-datasets = "0.9"
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
rand = "0.9.2"
eframe = "0.27"
egui = "0.27"
image = { version = "0.25", features = ["jpeg"] }

